[gd_scene load_steps=5 format=3 uid="uid://ckafdr87gk60b"]

[ext_resource type="Script" uid="uid://c5devewfjvl86" path="res://main/genomes_panel/genome_panel.gd" id="1_smwaa"]
[ext_resource type="Texture2D" uid="uid://cukjbr1i65ply" path="res://icon/arrow_down.svg" id="1_uac58"]
[ext_resource type="Texture2D" uid="uid://cvjpeir0ejt2v" path="res://icon/delete.svg" id="2_smwaa"]
[ext_resource type="Texture2D" uid="uid://dbsq7g2fpejwq" path="res://icon/add.svg" id="3_vh8r0"]

[node name="GenomePanel" type="PanelContainer"]
size_flags_horizontal = 3
theme_type_variation = &"SubDetailPanel"
script = ExtResource("1_smwaa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ToggleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("1_uac58")

[node name="GenomeName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"LineEditFlat"
theme_override_colors/font_color = Color(0.840683, 0.00120019, 0.929285, 1)
text = "(genome name)"
flat = true

[node name="RemoveGenomeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_smwaa")

[node name="ConfirmRemoveGenomePopup" type="PopupPanel" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(367, 157)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup"]
offset_left = 8.0
offset_top = 8.0
offset_right = 359.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"SubDetailTitleLabel"
text = "Remove Genome"

[node name="ConfirmRemoveGenomeName" type="Label" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SubDetailTitleLabel"
text = "(genome name)"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"SubDetailTitleLabel"
text = "from Level?"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 1
text = "All cells belogining to the genome will be removed. The genome will still exist in your Genome Library."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer"]
layout_mode = 2

[node name="ConfirmRemoveGenomeButton" type="Button" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"

[node name="CancelRemoveGenomeButton" type="Button" parent="VBoxContainer/HBoxContainer/RemoveGenomeButton/ConfirmRemoveGenomePopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="ToggledContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ToggledContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ToggledContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="EnergyCostTitleLabel" type="Label" parent="VBoxContainer/ToggledContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"DimLabel"
text = "Energy Cost:"

[node name="EnergyCostValueLabel" type="Label" parent="VBoxContainer/ToggledContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "99"

[node name="AppearanceSetOptionTitleLabel" type="Label" parent="VBoxContainer/ToggledContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_type_variation = &"DimLabel"
text = "Appearance Set:"

[node name="AppearanceSetOptionButton" type="OptionButton" parent="VBoxContainer/ToggledContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="CellTypeContainer" type="VBoxContainer" parent="VBoxContainer/ToggledContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddCellTypeButton" type="Button" parent="VBoxContainer/ToggledContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Cell Type"
icon = ExtResource("3_vh8r0")
